package fms.Distopia.entities;

public enum Role {
    USER,
    ADMIN
}
